Add basic creation endpoints
