# services/user/user_models.go
@@ -1,4 +1,4 @@
-package models
+package user
 
 import (
 	"github.com/golang-jwt/jwt"
@@ -32,11 +32,28 @@ type LoginRequest struct {
 	Password string `json:"password" validate:"required"`
 }
 
-type RegisterRequest struct {
-	Email     string  `json:"email" validate:"required,email" unique:"true"`
-	Password  string  `json:"password" validate:"required"`
-	FirstName *string `json:"firstName" omitempty:"true"`
-	LastName  *string `json:"lastName" omitempty:"true"`
+// ---------------------------------------------------------------------------------------------------
+// ------------------------------------------ CREATE OBJECTS -----------------------------------------
+// ---------------------------------------------------------------------------------------------------
+type CreateUserRequest struct {
+	Username  string `json:"username" binding:"required"`
+	Password  string `json:"password" binding:"required"`
+	Email     string `json:"email" binding:"required"`
+	FirstName string `json:"firstName"`
+	LastName  string `json:"lastName"`
+	Phone     string `json:"phone"`
+}
+
+// ---------------------------------------------------------------------------------------------------
+// ----------------------------------------- RESPONSE OBJECTS ----------------------------------------
+// ---------------------------------------------------------------------------------------------------
+type UserResponse struct {
+	ID        string `json:"id,omitempty"`
+	Username  string `json:"username"`
+	Email     string `json:"email"`
+	FirstName string `json:"firstName,omitempty"`
+	LastName  string `json:"lastName,omitempty"`
+	Phone     string `json:"phone,omitempty"`
 }
 
 // ---------------------------------------------------------------------------------------------------
@@ -47,9 +64,9 @@ type User struct {
 	Username        string              `json:"username,omitempty" bson:"username,omitempty" validate:"required"`
 	Password        string              `json:"-" bson:"password,omitempty" validate:"required"`
 	Email           string              `json:"email" bson:"email" validate:"required,email"`
-	FirstName       *string             `json:"firstName,omitempty" bson:"firstName,omitempty"`
-	LastName        *string             `json:"lastName,omitempty" bson:"lastName,omitempty"`
-	Phone           *string             `json:"phone,omitempty" bson:"phone,omitempty"`
+	FirstName       string             `json:"firstName,omitempty" bson:"firstName,omitempty"`
+	LastName        string             `json:"lastName,omitempty" bson:"lastName,omitempty"`
+	Phone           string             `json:"phone,omitempty" bson:"phone,omitempty"`
 	ShippingAddress *primitive.ObjectID `json:"shippingAddress,omitempty" bson:"shippingAddress,omitempty"`
 	Shop            *primitive.ObjectID `json:"shop,omitempty" bson:"shop,omitempty"`
 	CreatedAt       primitive.DateTime  `json:"createdAt,omitempty" bson:"createdAt,omitempty"`
